# type_name

./: .gitmodules  README.md  compile_time_strings.h  main.C  main.cpp  meson.build  type_name.h  type_name_pt.hpp  type_name_rt.h  type_name_rt.hpp
test/: type_name_pt.cpp
